--- a/html/articles.html
+++ b/html/articles.html
@@ -2,10 +2,10 @@
 <html lang="ca">
 <head>
   <meta charset="utf-8">
-  <title>Pàgina Principal - AquaNadadors</title>
-  <meta name="author" content="Rocío Albelda">
-  <meta name="description" content="Club de natació AquaNadadors">
-  <link rel="stylesheet" href="../css/estils.css"> 
+  <title>Pàgina Articles - AquaNadadors</title>
+  <meta name="author" content="Rocio Albelda i Pau Canet">
+  <meta name="description" content="Club de nataci&oacute; AquaNadadors">
+  <link rel="stylesheet" href="../css/articles.css"> 
   <link rel="icon" href="../images/imagenFavicon.jpg">
 </head>
 <body>
@@ -25,23 +25,81 @@
     </nav>
   </header>
 
-  <!-- Imatge principal -->
-  <section id="imagen-principal">
-    <img src="../images/imagenprincipal.png" alt="Imagen principal de AquaNadadors">
-  </section>
-
-  <!-- Contingut principal -->
   <main>
-    <div id="principal">
-      <h2>Benvinguts a AquaNadadors</h2>
-      <p>Descobreix el nostre club de natació, on fomentem l'esport, la salut i la diversió a l'aigua per a totes les edats i nivells.</p>
-    </div>
+    <div id="articlers_prin">
+      <div class="banner">
+        <h2>Submergeix-te en el Coneixement</h2>
+        <p>Descobreix els secrets dels campions i millora la teua t&eacute;cnica amb els nostres articles exclusius.</p>
+        <button class="boto-banner"><a href="articles.html#llista-articles"></a>Explorar Articles</button>
+      </div>
+
+      <section class="llista-articles">
+        <article class="carta-articles">
+          <div class="carta-article">
+            <h3>Beneficis de la nataci&oacute; matinal</h3>
+            <p>Nadar a primera hora del dia ajuda a activar el metabolisme i millora la concentraci&oacute;...</p>
+            <a href="https://caneth2o.com/beneficis-de-la-natacio-per-a-la-salut-fisica-i-mental/" class="link_noticia">Llegir més</a>
+          </div>
+        </article>
+<hr>
+        <article class="carta-articles">
+          <div class="carta-article">
+            <h3>Com triar les millors ulleres</h3>
+            <p>L'ajust i la visibilitat s&oacute;n clau per a un bon entrenament en aigües obertes o piscina...</p>
+            <a href="https://fashionhub-ca.decorexpro.com/bassejn/ochki/#google_vignette" class="link_noticia">Llegir més</a>
+          </div>
+        </article>
+<hr>
+        <article class="carta-articles">
+          <div class="carta-article">
+              <h3>Alimentaci&oacute; per a nadadors</h3>
+              <p>Qu&eacute; menjar abans i despr&eacute;s d'entrenar per optimitzar l'energia i la recuperaci&oacute; muscular.</p>
+              <a href="https://www.nutriumpfg.com/blog-nutricion/dietas-saludables/dieta-para-nadadores/" class="link_noticia">Llegir més</a>
+          </div>
+        </article>
+<hr>
+        <article class="carta-articles">
+          <div class="carta-article">
+              <h3>Exercicis de respiraci&oacute;</h3>
+              <p>T&eacute;cniques per augmentar la teua capacitat pulmonar i aguantar m&eacute;s baix l'aigua.</p>
+              <a href="#taula-exercicis" class="link_noticia">Veure exercicis de respiraci&oacute;</a>
+          </div>
+      </section>
+
+      <h2 id="taula-exercicis" class="titulo-tabla">Rutina d'exercicis de respiraci&oacute;</h2>
+      <table class="tabla-articulos">
+        <tr>
+            <th>Exercici</th>
+            <th>Descripci&oacute;</th>
+            <th>Repeticions</th>
+        </tr>
+        <tr>
+            <td>Apnea en repòs</td>
+            <td>Aguantar la respiraci&oacute; baix l'aigua totalment quiet.</td>
+            <td>3 de 30 segons</td>
+        </tr>
+        <tr>
+            <td>Bustia d'aire</td>
+            <td>Traure bombolles molt lentament per la boca.</td>
+            <td>10 vegades</td>
+        </tr>
+        <tr>
+            <td>Braçada amb pausa</td>
+            <td>Nadar crol aguantant la respiraci&oacute; cada 5 braçades.</td>
+            <td>4 piscines</td>
+        </tr>
+        <tr>
+            <td>Recuperaci&oacute; activa</td>
+            <td>Nadar molt lentament controlant les pulsacions.</td>
+            <td>2 minuts</td>
+        </tr>
+      </table>
+      </div>
   </main>
 
-  <!-- Peu de pagina -->
-  <footer>
+<footer>
     <p>&copy; 2025 AquaNadadors. Tots els drets reservats.</p>
-  </footer>
+</footer>
 
-  </body>
+</body>
 </html>
