--- a/html/especialitats.html
+++ b/html/especialitats.html
@@ -2,10 +2,10 @@
 <html lang="ca">
 <head>
   <meta charset="utf-8">
-  <title>Pàgina Principal - AquaNadadors</title>
-  <meta name="author" content="Rocío Albelda">
+  <title>Pàgina Especialitats - AquaNadadors</title>
+  <meta name="author" content="Rocio Albelda i Pau Canet">
   <meta name="description" content="Club de natació AquaNadadors">
-  <link rel="stylesheet" href="../css/estils.css"> 
+  <link rel="stylesheet" href="../css/especialitats.css"> 
   <link rel="icon" href="../images/imagenFavicon.jpg">
 </head>
 <body>
@@ -25,22 +25,82 @@
     </nav>
   </header>
 
-  <!-- Imatge principal -->
-  <section id="imagen-principal">
-    <img src="../images/imagenprincipal.png" alt="Imagen principal de AquaNadadors">
-  </section>
-
   <!-- Contingut principal -->
-  <main>
+  <main class="image-fondo">
     <div id="principal">
-     
+      <h2>Especialitats de la Natació</h2>
+      <p>Explora les diferents disciplines que practiquem al nostre club.</p>
+    </div>    
+      <table>
+        <tr>
+          <th>Especialitat</th>
+          <th>Descripció</th>
+          <th>Demostració</th>
+        </tr>
+        <tr>
+          <td>Crol (Estil Lliure)</td>
+          <td>És l'estil més ràpid i utilitzat. Es basa en una acció alternativa dels braços i una puntada de peu constant.</td>
+          <td><a href="https://www.youtube.com/watch?v=u5ZWVginAXQ" class="link_video" target="_blank">Veure vídeo</a></td>
+        </tr>
+        <tr>
+          <td>Braça</td>
+          <td>L'estil més antic. Requereix una coordinació precisa entre la braçada circular i la puntada de peu de "rana".</td>
+          <td><a href="https://www.youtube.com/watch?v=xKUobMYf7Bg" class="link_video" target="_blank">Veure vídeo</a></td>
+        </tr>
+        <tr>
+          <td>Esquena</td>
+          <td>Similar al crol però de boca amunt. És fonamental mantenir el cos horitzontal i el cap quiet.</td>
+          <td><a href="https://www.youtube.com/watch?v=P5FcuTSL-mw" class="link_video" target="_blank">Veure vídeo</a></td>
+        </tr>
+        <tr>
+          <td>Papallona</td>
+          <td>L'estil més exigent físicament. Utilitza un moviment ondulant del cos i una braçada simultània.</td>
+          <td><a href="https://www.youtube.com/watch?v=PDgJ8erCGWg" class="link_video" target="_blank">Veure vídeo</a></td>
+        </tr>
+          
+      </table>
+
+    <div id="principal">
+      <h2>Horari de Competicions</h2>
+      <p>Consulta les pròximes dates de les nostres disciplines.</p>
     </div>
+      <table class="taula-horari">
+        <tr>
+          <th>Dia</th>
+          <th>Hora</th>
+          <th>Especialitat</th>
+          <th>Lloc</th>
+        </tr>
+       <tr>
+          <td>Dissabte, 15 Febrer</td>
+          <td>09:00 - 11:00</td>
+          <td>Crol (Estil Lliure)</td>
+          <td>Piscina Municipal València</td>
+        </tr>
+        <tr>
+          <td>Dissabte, 15 Febrer</td>
+          <td>11:30 - 13:30</td>
+          <td>Braça</td>
+          <td>Piscina Municipal València</td>
+        </tr>
+        <tr>
+          <td>Diumenge, 16 Març</td>
+          <td>09:00 - 11:00</td>
+          <td>Esquena</td>
+          <td>Club Nàutic AquaNadadors</td>
+        </tr>
+        <tr>
+          <td>Diumenge, 16 Març</td>
+          <td>11:30 - 13:30</td>
+          <td>Papallona</td>
+          <td>Club Nàutic AquaNadadors</td>
+        </tr>
+      </table>
   </main>
 
   <!-- Peu de pagina -->
   <footer>
     <p>&copy; 2025 AquaNadadors. Tots els drets reservats.</p>
   </footer>
-
   </body>
 </html>
