--- a/html/index.html
+++ b/html/index.html
@@ -2,9 +2,9 @@
 <html lang="ca">
 <head>
   <meta charset="utf-8">
-  <title>Pàgina Principal - AquaNadadors</title>
-  <meta name="author" content="Rocío Albelda">
-  <meta name="description" content="Club de natació AquaNadadors">
+  <title>P&aacute;gina Principal - AquaNadadors</title>
+  <meta name="author" content="Rocio Albelda i Pau Canet">
+  <meta name="description" content="Club de nataci&oacute; AquaNadadors">
   <link rel="stylesheet" href="../css/estils.css"> 
   <link rel="icon" href="../images/imagenFavicon.jpg">
 </head>
@@ -25,24 +25,72 @@
     </nav>
   </header>
 
-  <!-- Imatge principal -->
-  <section id="imagen-principal">
-    <img src="../images/imagenprincipal.png" alt="Imagen principal de AquaNadadors">
-  </section>
-
   <!-- Contingut principal -->
-  <main>
-    <div id="principal">
-      <h2>Benvinguts a AquaNadadors</h2>
-      <p>Descobreix el nostre club de natació, on fomentem l'esport, la salut i la diversió a l'aigua per a totes les edats i nivells.</p>
+  <main class="image-fondo">
+    <div id="layout-principal">
+      
+      <aside id="menu-izquierda">
+        <a href="quisom.html"> <h3> Qui som</h3> </a>
+        <p>AquaNadadors és un club dedicat a la pràctica i promoció de la natació per a totes les edats. 
+          El nostre objectiu és fomentar l’esport, els hàbits saludables i el treball en equip mitjançant l’aigua.</p>
+<br>
+        <a href="articles.html"> <h3> Articles Destacats</h3> </a>
+        <ul>
+          <li><a href="articles.html#beneficis">Beneficis Nataci&oacute;</a></li>
+          <li><a href="articles.html#ulleres">Triar Ulleres</a></li>
+          <li><a href="articles.html#tecnica">Millora la Tècnica</a></li>
+          <li><a href="articles.html#respiracio">Exercicis Respiraci&oacute;</a></li>
+        </ul>
+
+<br>
+        <a href="nadadors.html"> <h3>Nadadors</h3> </a>
+        <p>Asi est&aacute;n els nadadors m&eacute;s importants de l'hist&oacute;ria de la nataci&oacute;.</p>
+<br>
+        <a href="especialitats.html"> <h3>Especialitats</h3> </a>
+        <p>Explora les diferents disciplines que practiquem al nostre club.</p>
+        <br>
+        <a href="contacte.html"> <h3>Contacte</h3> </a>
+        <p>Estem ací per a resoldre qualsevol dubte sobre els nostres cursos i entrenaments.</p>
+      </aside>
+
+      <section id="video-natacio">
+        <video autoplay muted loop id="video-fondo">
+          <source src="../videos/video_natacion_fondo.mp4" type="video/mp4">
+        </video>
+        <div class="textdamunt">
+          <h2>Passi&oacute; per l'Aigua</h2>
+        </div>
+      </section>
+
+      <section id="menu-derecha">
+        <div id="principal">
+          <h2>Benvinguts a AquaNadadors</h2>
+          <p>Benvinguts a la web d’AquaNadadors, un club de nataci&oacute; per a totes les edats.
+            El nostre objectiu &eacute;s fomentar l’esport i els h&aacute;bits saludables a trav&eacute;s de l’aigua. 
+            Comptem amb entrenadors preparats que adapten els entrenaments a cada nivell. 
+            Oferim un entorn segur i agradable per aprendre a nadar. 
+            Al club treballem valors com el respecte i l’esforç. 
+            Participem en activitats i competicions durant tot l’any. 
+            AquaNadadors combina esport i diversi&oacute;. 
+            El nostre compromís &eacute;s ajudar cada persona a millorar i gaudir de la nataci&oacute;.</p>
+          <br>
+          <hr>
+          <br>
+          <p><strong>Què trobar&aacute;s a la nostra web?</strong></p>
+          <p>A la web d’AquaNadadors pots trobar informaci&oacute; detallada sobre el club i la seua història. 
+            S’hi mostren les diferents disciplines i nivells de nataci&oacute; que existeixen. 
+            Tamb&eacute; es pot consultar alguns articles de alimentaci&oacute;, millorar la t&eacute;cnica,etc. 
+            <br> Inclou notícies i esdeveniments relacionats amb competicions i jornades esportives, 
+            disposa d’un apartat de galeria amb imatges dels millors nadadors de l'hist&oacute;ria. 
+            <br> A m&eacute;s, hi ha un formulari de contacte per a resoldre dubtes o sol·licitar informaci&oacute;.</p>
+        </div>
+      </section>
     </div>
   </main>
-
   <!-- Peu de pagina -->
-  <footer>
-    <p>&copy; 2025 AquaNadadors. Tots els drets reservats.</p>
-  </footer>
-
+      <footer>
+      <p>&copy; 2025 AquaNadadors. Tots els drets reservats.</p>
+      </footer>
   </body>
 </html>
 
