--- a/html/nadadors.html
+++ b/html/nadadors.html
@@ -2,10 +2,10 @@
 <html lang="ca">
 <head>
   <meta charset="utf-8">
-  <title>Pàgina Principal - AquaNadadors</title>
-  <meta name="author" content="Rocío Albelda">
-  <meta name="description" content="Club de natació AquaNadadors">
-  <link rel="stylesheet" href="../css/estils.css"> 
+  <title>Pàgina Nadadors - AquaNadadors</title>
+  <meta name="author" content="Rocio Albelda i Pau Canet">
+  <meta name="description" content="Club de nataci&oa&oacute; AquaNadadors">
+  <link rel="stylesheet" href="../css/nadadors.css"> 
   <link rel="icon" href="../images/imagenFavicon.jpg">
 </head>
 <body>
@@ -25,22 +25,73 @@
     </nav>
   </header>
 
-  <!-- Imatge principal -->
-  <section id="imagen-principal">
-    <img src="../images/imagenprincipal.png" alt="Imagen principal de AquaNadadors">
-  </section>
-
   <!-- Contingut principal -->
-  <main>
+  <main class="fondo-nadadors">
     <div id="principal">
-    
+      <h2>Nadadors Espanyols Destacats</h2>
+      <p>Coneix als grans referents de la nataci&oacute; espanyola que ens inspiren cada dia.</p>
     </div>
-  </main>
+
+    <section class="contenedor-nadadors">
+      <article class="nadadors">
+        <h3>Mireia Belmonte</h3>
+        <p>Campiona olímpica, mundial i europea. Especialista en estils i papallona.</p>
+        <a href="https://ca.wikipedia.org/wiki/Mireia_Belmonte_i_Garc%C3%ADa" target="_blank" class="boto-wiki">Llegir m&eacute;s</a>
+      </article>
+
+      <article class="nadadors">
+        <h3>Hugo Gonz&aacute;lez</h3>
+        <p>Campi&oacute; del m&oacute;n en 200m esquena i referent actual de la nataci&oa&oacute; masculina.</p>
+        <a href="https://es.wikipedia.org/wiki/Hugo_Gonz%C3%A1lez_de_Oliveira" target="_blank" class="boto-wiki">Llegir m&eacute;s</a>
+      </article>
+
+      <article class="nadadors">
+        <h3>Ona Carbonell</h3>
+        <p>Llegenda de la nataci&oa&oacute; artística amb el major nombre de medalles mundials.</p>
+        <a href="https://ca.wikipedia.org/wiki/Ona_Carbonell_i_Ballestero" target="_blank" class="boto-wiki">Llegir m&eacute;s</a>
+      </article>
+
+      <article class="nadadors">
+        <h3>Rafa Muñoz</h3>
+        <p>Ex-plusmarquista mundial en 50m papallona i medallista internacional.</p>
+        <a href="https://es.wikipedia.org/wiki/Rafael_Mu%C3%B1oz_P%C3%A9rez" target="_blank" class="boto-wiki">Llegir m&eacute;s</a>
+      </article>
+
+      <article class="nadadors">
+        <h3>Erika Villa&eacute;cija</h3>
+        <p>Referent en aigües obertes i fons, campiona mundial en piscina curta.</p>
+        <a href="https://ca.wikipedia.org/wiki/Erika_Villa%C3%A9cija_i_Garc%C3%ADa" target="_blank" class="boto-wiki">Llegir m&eacute;s</a>
+      </article>
+
+      <article class="nadadors">
+        <h3>Joan Lluís Pons</h3>
+        <p>Especialista en 400m estils, finalista olímpic en Rio 2016.</p>
+        <a href="https://ca.wikipedia.org/wiki/Joan_Llu%C3%ADs_Pons_Ramon" target="_blank" class="boto-wiki">Llegir m&eacute;s</a>
+      </article>
+
+      <article class="nadadors">
+        <h3>Jessica Vall</h3>
+        <p>Campiona d'Europa i medallista mundial en la modalitat de braça.</p>
+        <a href="https://ca.wikipedia.org/wiki/Jessica_Vall_i_Montero" target="_blank" class="boto-wiki">Llegir m&eacute;s</a>
+        </article>
+
+      <article class="nadadors">
+        <h3>Aschwin Wildeboer</h3>
+        <p>Ex-recordman mundial en 100m esquena i medallista mundial.</p>
+        <a href="https://ca.wikipedia.org/wiki/Aschwin_Wildeboer_i_Faber" target="_blank" class="boto-wiki">Llegir m&eacute;s</a>
+      </article>
+
+      <article class="nadadors">
+        <h3>Marina García</h3>
+        <p>Especialista en braça, múltiple medallista europea i olímpica.</p>
+        <a href="https://ca.wikipedia.org/wiki/Marina_Garc%C3%ADa_i_Urzaiz" target="_blank" class="boto-wiki">Llegir m&eacute;s</a>
+      </article>
+    </section>
+</main>
 
   <!-- Peu de pagina -->
   <footer>
     <p>&copy; 2025 AquaNadadors. Tots els drets reservats.</p>
   </footer>
-
   </body>
 </html>
