--- a/html/quisom.html
+++ b/html/quisom.html
@@ -2,10 +2,10 @@
 <html lang="ca">
 <head>
   <meta charset="utf-8">
-  <title>Pàgina Principal - AquaNadadors</title>
-  <meta name="author" content="Rocío Albelda">
-  <meta name="description" content="Club de natació AquaNadadors">
-  <link rel="stylesheet" href="../css/estils.css"> 
+  <title>Pàgina Qui som - AquaNadadors</title>
+  <meta name="author" content="Rocio Albelda i Pau Canet">
+  <meta name="description" content="Club de nataci&oacute; AquaNadadors">
+  <link rel="stylesheet" href="../css/quisom.css"> 
   <link rel="icon" href="../images/imagenFavicon.jpg">
 </head>
 <body>
@@ -25,22 +25,40 @@
     </nav>
   </header>
 
-  <!-- Imatge principal -->
-  <section id="imagen-principal">
-    <img src="../images/imagenprincipal.png" alt="Imagen principal de AquaNadadors">
-  </section>
-
   <!-- Contingut principal -->
-  <main>
-    <div id="principal">
-      
+    <section id="banner-quisom">
+        <div class="text-damunt">
+            <h2>Coneix la nostra història</h2>
+        </div>
+    </section>
+<main class="image-fondo">
+    <div id="layout-principal">
+        <section id="esquerra">
+            <h3>Sobre AquaNadadors</h3>
+            <p>AquaNadadors va n&aacute;ixer l'any 2010 amb la il·lusi&oacute; de compartir la passi&oacute; per l'aigua amb tota la comunitat. 
+              El que va començar com un xicotet grup d'amics, s'ha convertit avui en un club referent.</p>
+            <br>
+            <p>La nostra missi&oacute; &eacute;s promoure un estil de vida saludable a trav&eacute;s de la nataci&oacute;,
+              oferint entrenaments per a tots els nivells, des d'iniciaci&oacute; fins a competici&oacute; d'alt rendiment.</p>
+        </section>
+
+        <aside id="dreta">
+            <div id="principal">
+                <h3>Els nostres Valors</h3>
+                <ul>
+                    <li><strong>Comprom&iacute;s:</strong> Donem el millor de nosaltres en cada braçada.</li>
+                    <li><strong>Respecte:</strong> L'aigua &eacute;s de tots i per a tots.</li>
+                    <li><strong>Superaci&oacute;:</strong> Ajudem a cada nadador a batre els seus propis r&eacute;cords.</li>
+                    <li><strong>Salut:</strong> Fomentem l'esport com a base del benestar.</li>
+                </ul>
+            </div>
+        </aside>
     </div>
-  </main>
+</main>
 
   <!-- Peu de pagina -->
   <footer>
     <p>&copy; 2025 AquaNadadors. Tots els drets reservats.</p>
   </footer>
-
   </body>
 </html>
